# shillscore

./: .env.example  .gitignore  LICENSE  Makefile  README.md  rerun.sh
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: cli.py  config.py  db.py  main.py  models.py
apps/api/app/auth/: twitter.py
apps/api/app/clients/: coingecko.py  oembed.py  twitter.py
apps/api/app/routers/: admin.py  charts.py  health.py  leaderboard.py  tweet.py
apps/api/app/services/: parsing.py  pricing.py  resolver.py
apps/api/app/worker/: jobs.py  main.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_user_tokens_views_ci.py  0003_raw_tweets.py  0004_cohort_leaderboard.py  0005_alias_and_ambiguous.py  0006_raw_tweets_oembed.py
apps/api/scripts/: backfill_oembed.py  prime_tokens.py
apps/api/shillscore/: __init__.py
apps/web/: .dockerignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/account/[handle]/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/components/: AccountMentionsChart.tsx  LeaderboardCurvesChart.tsx  TokenChartsGrid.tsx  TopAccountsPodium.tsx  TweetEmbedCard.tsx
apps/web/lib/: api.ts  palette.ts  twitter-widgets.ts
docs/: data-model-price.md  data-model-user-follows.md  plan.md
docs/decisions/: 0001-monorepo-layout.md
infra/: .env.bak  .env.example  cloudflare-tunnel.md  docker-compose.yml
scripts/: README.md
sql/: recreate_matviews.sql  wipe_tickers.sql
(+1 files in other folders)
