[project]
name = "shillscore-api"
version = "0.1.0"
description = "shillscore API + worker"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "psycopg2-binary>=2.9",
  "alembic>=1.14",
  "arq>=0.26",
  "redis>=5.2",
  "httpx>=0.28",
  "authlib>=1.3",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.20",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
